--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,9 +65,8 @@
             android:layout_height="wrap_content"
             android:textOn="@string/on"
             android:textOff="@string/off"
+            android:onClick="onSwitchClicked"
             />
-            <!--android:onClick="onSwitchClicked"-->
-
 
     </LinearLayout>
 
