--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,14 +102,28 @@
                 android:onClick="onRadiobuttonClicked"
                 />
         </RadioGroup>
-        <Spinner
-            android:id="@+id/spinner"
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:entries="@array/spinner_values"
-            android:onClick="onSpinnerClicked"
-            />
+            android:drawableRight="@drawable/android"
+            android:text="@string/click_me"/>
+
 
     </LinearLayout>
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:src="@drawable/starbuzz_logo"
+        android:contentDescription="@string/starbuzz_logo"
+    />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/spinner_values"
+        />
+        <!--android:onClick="onSpinnerClicked"/>-->
 
 </FrameLayout>
